--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 html, body {
-  height: 100%; /* Ensure both html and body take full height */
+  height: 100%;
   margin: 0;
 }
 
@@ -33,9 +33,9 @@ body {
 }
 
 .button-container {
-  display: flex; /* Use flexbox for layout */
-  justify-content: space-around; /* Center buttons horizontally */
-  margin-top: 20px; /* Space above the buttons */
+  display: flex; 
+  justify-content: space-around; 
+  margin-top: 20px; 
 }
 
 button{
@@ -229,41 +229,41 @@ outline: none;
 
 /* Header*/
 .content-wrapper {
-  display: flex; /* Use flexbox for layout */
-  flex-direction: column; /* Stack items vertically */
-  justify-content: flex-start; /* Center items vertically */
-  align-items: center; /* Center items horizontally */
-  height: 100vh; /* Full height of the viewport */
-  margin: 0; /* Remove default margin */
+  display: flex;
+  flex-direction: column; 
+  justify-content: flex-start; 
+  align-items: center; 
+  height: 100vh; 
+  margin: 0;
   padding-top: 105px;
 }
 
 .head-container {
-  display: flex; /* Use flexbox for layout */
-  flex-direction: column; /* Stack items vertically */
-  align-items: center; /* Center items horizontally */
-  text-align: center; /* Center text */
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  text-align: center; 
   margin-bottom: 20px;
 }
 .header{
   font-family: "Nunito", sans-serif;
   font-weight: 900;
   color: white;
-  padding: 4px; /* Reduced padding to bring headers closer */
-  margin: 0; /* Remove default margin */
+  padding: 4px; 
+  margin: 0;
   font-size: 4.3em;
-  opacity: 0; /* Start hidden */
-  animation: fadeIn 1s forwards; /* Fade in animation */
+  opacity: 0;
+  animation: fadeIn 1s forwards; 
 }
 
 .welcome-text {
-  color: white; /* Set color for welcome text */
+  color: white; 
  
   
 }
 
 .name-text {
-  color: #AED6F1; /* Set color for name text */
+  color: #AED6F1; 
   
   margin-left: 20px;
 }
@@ -276,16 +276,16 @@ animation: fadeIn 1s forwards;
 }
 
 #head1{
-  animation-delay: 0s; /* No delay for the first header */
+  animation-delay: 0s; 
 }
 
 #head2{
-  animation-delay: 3s; /* Delay for the second header */
+  animation-delay: 3s;
 }
 
 
 #head3{
-  animation-delay: 6s; /* Delay for the third header */
+  animation-delay: 6s; 
 }
 
 
