--- a/src/style.css
+++ b/src/style.css
@@ -385,6 +385,9 @@ transform: translate(95vw,90vh);
 
 /* Responsive Styles */
 @media (max-width: 768px) { /* Tablet */
+  body{
+    background-color: #000000;
+  }
   .header {
     font-size: 3em; /* Smaller font size for tablets */
   }
