--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ body {
   -moz-animation: fadeIn 1 1s ease-out;
   -o-animation: fadeIn 1 1s ease-out;
   animation: fadeIn 1 1s ease-out;
+  background-color: #000000;
 }
 
 .button-container {
